# clickup-utils

./: .env.example  .env.example.backup  .env.test.example  .gitignore  CLICKUP_API_COMPARISON.md  CLIPPY_CLEANUP_RECOMMENDATIONS.md  CODE_REVIEW_RECOMMENDATIONS.md  COMMENT_SEARCH_IMPROVEMENTS.md  Cargo.toml  INTEGRATION_TESTS_README.md  INTEGRATION_TEST_PLAN.md  LIBRARY_BINARY_RESTRUCTURE_PLAN.md  PRE_MIGRATION_ANALYSIS.md  README.md  ROADMAP_COMPLETED.md  TEST_COVERAGE_ANALYSIS.md  env.test.example
.cursor/rules/: check-for-current-stable-crates.mdc  code-documentation-sync.mdc  code-test-sync.mdc  documentation-organization.mdc
clickup-core/: Cargo.toml
dev-docs/: ARCHITECTURAL_ANALYSIS_AND_RECOMMENDATIONS.md  CLICKUP_API_COMPARISON.md  CODE_REVIEW_RECOMMENDATIONS.md  DOCUMENTATION_MASTER_PLAN.md  DOCUMENTATION_REVIEW_AND_RECOMMENDATIONS.md  DOCUMENTATION_SUMMARY_AND_NEXT_STEPS.md  INTEGRATION_TESTS_README.md  INTEGRATION_TEST_PLAN.md  LIBRARY_BINARY_SEPARATION_IMPLEMENTATION.md  PROJECT_STATUS.md  STATUS_DASHBOARD.md  TEST_COVERAGE_ANALYSIS.md
dev-docs/adr/: 0001-library-binary-separation.md  0003-rate-limiting-policy.md  0004-integration-testing-strategy.md  0009-async-patterns.md  0010-command-module-standardization-pattern.md  0011-concurrent-search-strategy.md  0012-code-quality-standards.md  0013-documentation-architecture.md
dev-docs/old_code_refactors/: COMMAND_DUPLICATE_CODE_ANALYSIS.md
dev-docs/todo/: ARCHITECTURAL_ANALYSIS_AND_RECOMMENDATIONS.md  CACHING_STRATEGY.md  CLICKUP_API_COMPARISON.md  INTEGRATION_TEST_PLAN.md
docs-dev/: PROJECT_STATUS.md  ROADMAP_COMPLETED.md  TEST_STATUS_SUMMARY.md
docs-dev/adr/: 0002-repository-pattern.md  0006-command-executor-pattern.md
docs-dev/todo/: FUTURE_CACHING_STRATEGY.md
docs-user/: INSTALLATION.md  TROUBLESHOOTING.md
docs/dev/: INTEGRATION_TESTS_README.md  PROJECT_STATUS.md
docs/dev/adr/: 0005-error-handling-strategy.md  0007-utility-modules-pattern.md  0008-configuration-management.md
docs/dev/todo/: ADR_VIOLATIONS_ANALYSIS.md  ARCHITECTURAL_ANALYSIS_AND_RECOMMENDATIONS.md  CLICKUP_API_COMPARISON.md  CODE_QUALITY_ANALYSIS.md  TEST_COVERAGE_ANALYSIS.md
docs/dev/todo/long-term/: event-system-architecture.md  security-storage-options.md
docs/user/: QUICK_REFERENCE.md  USER_GUIDE.md
examples/: get-tasks-by-tag.ps1  get-tasks-by-tag.sh  search-tasks-by-tag.ps1  search-tasks-by-tag.sh
scripts/: run_integration_tests.sh
src/: api.rs  app.rs  config.rs  constants.rs  di.rs  error.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  repository.rs
src/commands/: README.md  attachments.rs  auth.rs  comments.rs  lists.rs  mod.rs  spaces.rs  tags.rs  tasks.rs  teams.rs  utils.rs  workspaces.rs
tests/: api_tests.rs  attachment_tests.rs  auth_tests.rs  clickup_integration_tests.rs  comment_tests.rs  config_tests.rs  error_tests.rs  integration_tests.rs  lib_tests.rs  list_tests.rs  main_tests.rs  models_tests.rs  rate_limiter_tests.rs  space_tests.rs  tag_tests.rs  task_tests.rs  team_tests.rs  test_utils.rs  utils_tests.rs  workspace_tests.rs
