[package]
name = "clickup-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dave Mackey <dave@davemackey.net>"]
description = "A command-line interface for ClickUp API"
license = "MIT"
repository = "https://github.com/davidshq/clickup-cli"
keywords = ["clickup", "cli", "api", "task-management", "productivity"]
categories = ["command-line-utilities", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/clickup-cli"
homepage = "https://github.com/davidshq/clickup-cli"

# Package metadata for better discoverability
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Package metadata for crates.io
[package.metadata.crates-io]
repository = "https://github.com/davidshq/clickup-cli"
homepage = "https://github.com/davidshq/clickup-cli"
documentation = "https://docs.rs/clickup-cli"
keywords = ["clickup", "cli", "api", "task-management", "productivity"]
categories = ["command-line-utilities", "api-bindings"]
license = "MIT"
description = "A comprehensive command-line interface for the ClickUp API"

[dependencies]
# CLI and argument parsing
# Provides command-line argument parsing with derive macros
clap = { version = "4.4", features = ["derive"] }

# HTTP client for API requests
# Handles HTTP requests to ClickUp API with JSON support
reqwest = { version = "0.12.22", features = ["json"] }

# JSON serialization and deserialization
# Used for API request/response handling and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for concurrent operations
# Required for async/await support throughout the application
tokio = { version = "1.0", features = ["full"] }

# Configuration management
# Handles loading configuration from files and environment variables
config = "0.15.13"
# Provides cross-platform directory discovery
dirs = "6.0.0"
# Environment file support
dotenvy = "0.15"

# Error handling
# Enables custom error types with derive macros
thiserror = "2.0.12"

# Terminal output and formatting
# Adds colored output for better user experience
colored = "3.0.0"
# Provides table formatting for structured output
comfy-table = "7.1"

# TOML serialization
# Used for configuration file format
toml = "0.9.0"

# Date and time handling
# Used for parsing and manipulating dates for overdue task detection
chrono = { version = "0.4", features = ["serde"] }

# Logging
# Provides structured logging throughout the application
env_logger = "0.11.8"
log = "0.4"

[lib]
name = "clickup_cli"
path = "src/lib.rs"

[dev-dependencies]
# Temporary file and directory utilities for testing
tempfile = "3.8"